# Emotion-Detection

./: Emotion_Detection_DL.ipynb  README.md  emotion_model.pth  requirements.txt
backend/: main.py  pyproject.toml
